refactor: clean up unused imports and improve CSV parser initialization